<resources>
    <string name="app_name">ShareBooks</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="book_distribution_by_publication_year">Book Distribution by Publication Year</string>
    <string name="book_distribution_by_category">Book Distribution by Category</string>
    <string name="avatar">avatar_image</string>
    <string name="user_name">User Name</string>
    <string name="user_address">User Address</string>
    <string name="user_biography">User Biography</string>
    <string name="user_id">User ID</string>
    <string name="follow_me">Follow me</string>
    <string name="unfollow">Unfollow</string>
    <string name="my_fans">My fans</string>
    <string name="my_following">My following</string>
    <string name="_0">0</string>
    <string name="my_like">My like</string>
    <string name="my_borrow">My borrow</string>
    <string name="Like">Like</string>
    <string name="Borrow">Borrow</string>
    <string name="Dislike">Dislike</string>
    <string name="Return">Return</string>
    <string name="logout">Logout</string>
    <string name="daily_statistics">Daily Statistics</string>
    <string name="daily_statistics_of_users_activity">Daily Statistics of Users Activity</string>
    <string name="available">Available</string>
    <string name="borrowed">Borrowed</string>
    <string name="likes_gt_49"><![CDATA[Likes > 49]]></string>
    <string name="likes_lt_50"><![CDATA[Likes < 50]]></string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>

    <string-array name="spinner_data">
        <item>Default</item>
        <item>Title ↑</item>
        <item>Title ↓</item>
        <item>Auth. ↑</item>
        <item>Auth. ↓</item>
        <item>Year ↑</item>
        <item>Year ↓</item>
    </string-array>

</resources>