<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/book_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:padding="16dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:paddingTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/book_title"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="ISBN: "
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/book_isbn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/numPages_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/numPages_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="Pages: "
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/book_numPages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="18dp"
                    android:paddingRight="10dp">

                    <LinearLayout
                        android:id="@+id/layout_borrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_borrow" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Borrow"
                            android:textSize="11sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_return"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_back" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Return"
                            android:textSize="11sp" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/liked_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:id="@+id/layout_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_like" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Like"
                            android:textSize="11sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_dislike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_dislike" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Dislike"
                            android:textSize="11sp" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/authors_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/authors_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="Authors: "
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/book_authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:textSize="16sp" />
            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/publishedYear_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="Published: "
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/book_publishedYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/category_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="Category: "
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/book_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/averageRating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="Average Rating: "
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/book_averageRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ratingsCount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="Ratings Count: "
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/book_ratingsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="Description: "
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>